# AdbAutoPlayer

./: .pre-commit-config.yaml
python/: pyproject.toml
python/adb_auto_player/: __init__.py  adb.py  command.py  config_loader.py  device_stream.py  exceptions.py  game.py  main.py
python/adb_auto_player/games/: __init__.py
python/adb_auto_player/games/afk_journey/: __init__.py  afk_journey_base.py  main.py
python/adb_auto_player/games/afk_journey/mixins/: __init__.py  afk_stages.py  arcane_labyrinth.py  assist.py  legend_trial.py
python/adb_auto_player/games/infinity_nikki/: __init__.py
python/tests/: test_game.py
